# prosocpp

./: .clang-format  .gitignore  README.md
codeforces/: add_skeleton.sh
codeforces/1220A/: 1220a.cpp  1220a_modern.cpp  test1.txt  test2.txt
codeforces/1252A/: 1252a.cpp  test1.txt  test2.txt
codeforces/1252B/: 1252b.cpp  test1.txt  test2.txt
codeforces/2B/: 2B.cpp  test1.txt  test2.txt  test3.txt  test4.txt
codeforces/743A/: 743a.cpp  test1.txt  test2.txt  test3.txt
elements_of_programming_interviews/: 5_1.cpp  5_6.cpp  6_1.cpp  7_1.cpp  CMakeLists.txt  epi_build.sh  singly_linked_list.hpp
